[package]
name = "passman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.9.0-alpha.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
homedir = "0.2.1"

